# scim-server

./: .gitignore  404.html  Architecture.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  DYNAMIC_IMPLEMENTATION_SUMMARY.md  DYNAMIC_USAGE_GUIDE.md  DesignApproachImplementationPlan.md  ETAG_CONCURRENCY_ARCHITECTURE.md  ETAG_IMPLEMENTATION_PROGRESS.md  ETAG_TESTING_SUMMARY.md  GROUP_IMPLEMENTATION_SUMMARY.md  LOGGING.md  LOGGING_IMPLEMENTATION.md  PHASE1_INTEGRATION_SUMMARY.md  PHASE3_REALIGNMENT_PLAN.md  ProjectOverview.md  README.md  RELEASE_0_2_0_CHECKLIST.md  RELEASE_SUMMARY_0_2_0.md  RELEASE_SUMMARY_0_2_3.md  ROADMAP.md  SCHEMAS.md  SCIM_2_0_STANDARD_COVERAGE.md  SESSION_COMPLETION_SUMMARY.md  SIMPLIFICATION_SUMMARY.md  Scope.md  TESTING_IMPLEMENTATION_GUIDE.md  TESTING_PROGRESS.md  TEST_INFRASTRUCTURE_PROGRESS.md  User.json  VALIDATION_PHASES_ANALYSIS.md  VERSIONING.md  generate-docs.sh  print.html  rfc7644.txt  toc.html  toc.js
.github/workflows/: deploy-docs.yml
PROGRESS/: TEST_COVERAGE_ANALYSIS.md  VALIDATION_IMPLEMENTATION_ANALYSIS.md  VALIDATION_IMPLEMENTATION_GUIDE.md  performance-analysis.md
ReferenceNotes/: CurrentSchemaSystem.md  ETAG_CONCURRENCY_DESIGN.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  OPERATION_HANDLER_FOUNDATION.md  README-template.md  SCHEMA_DISCOVERY_FIX_SUMMARY.md  SCIM_2_0_COMPLIANCE_SUMMARY.md  documentation-alignment-plan.md  documentation-build-process.md  documentation-strategy.md  refactoring-checklist.md
benches/: resource_performance.rs  validation_overhead.rs
concepts/: architecture.html  etag-concurrency.html  multi-tenancy.html  scim-protocol.html
concurrency/: overview.html
docs/: COMPLIANCE_AUDIT_FINDINGS.md  DOCUMENTATION_REFACTORING_COMPLETE.md  README.md  mcp-version-management.md  migration-v0.4.md  phase-3-storage-implementations.md
docs/api/: README.md  core-types.md  error-handling.md  (+2 more)
examples/: CustomUser.json  automated_capabilities.rs  basic_usage.rs  builder_example.rs  compile_time_auth_example.rs  compile_time_rbac_example.rs  dynamic_server_example.rs  etag_concurrency_example.rs  group_example.rs  logging_backends.rs  logging_example.rs  mcp_etag_example.rs  mcp_server_example.rs  mcp_stdio_server.rs  multi_tenant_demo.rs  multi_tenant_example.rs  operation_handler_example.rs  provider_modes.rs  simple_mcp_demo.rs  test_group_mcp.rs
getting-started/: basic-operations.html  first-server.html  installation.html
how-to/: migrate-versions.html
providers/: basic.html
reference/: api-endpoints.html  scim-compliance.html
schemas/: Group.json  README.md  ServiceProviderConfig.json  User.json  custom-resources.html  overview.html
scripts/: build-docs.sh  check-docs.sh
src/: dynamic_server.rs  error.rs  lib.rs  mcp_integration.rs  operation_handler.rs  operation_handler.rs.backup  provider_capabilities.rs  resource.rs  schema.rs  schema_discovery.rs  schema_server.rs  scim_server.rs  server.rs  user_handler.rs
tests/: VALIDATION_TESTING.md  lib.rs  phase1_integration.rs  provider_restructure_verification.rs  standard_provider_tests.rs
validation/: advanced.html  configuration.html  field-level.html
(+333 files in other folders)
