[package]
name = "scim-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2.0.9"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.85"

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "schema-validator"
path = "src/bin/schema-validator.rs"
